Introduced docker-compose into project