@@ -173,6 +173,16 @@
                             <to>
                                 <image>bbelovic/tech-resource-tracker</image>
                             </to>
+                            <from>
+                                <image>
+                                    openjdk:14-alpine
+                                </image>
+                            </from>
+                            <container>
+                                <jvmFlags>
+                                    <jvmFlag>--enable-preview</jvmFlag>
+                                </jvmFlags>
+                            </container>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -193,7 +203,7 @@
                                 </image>
                             </from>
                             <to>
-                                <image>bbelovic/tech-resource-tracker</image>
+                                <image>bbelovic/tech-resource-tracker:composed</image>
                             </to>
                             <container>
                                 <entrypoint>
